--- a/assets/scss/components/_nav-article.scss
+++ b/assets/scss/components/_nav-article.scss
@@ -7,14 +7,24 @@
 	ul {
 		display: flex;
 		justify-content: space-between;
+		max-width: 75vw;
+		margin: 0 auto;
+
+		@include mobile {
+			flex-direction: column;
+		}
 
 		li {
 			position: relative;
 
+			@include mobile {
+				margin: 1.5rem 0;
+			}
+
 			a {
 				display: block;
 				margin: 0.5rem 0;
-				font-size: 1.75em;
+				font-size: clamp(1.25em, 4vw, 1.75em);
 				color: $M-02;
 				text-decoration: none;
 				text-transform: uppercase;
@@ -25,14 +35,17 @@
 				height: 45px;
 				margin: 0.5rem;
 				object-fit: cover;
-				vertical-align: middle;
+				vertical-align: sub;
 			}
 
 			span {
 				display: inline-block;
 				max-width: 30ch;
-				font-size: 1.25em;
+				max-height: 2.5em;
+				font-size: clamp(1em, 3vw, 1.25em);
 				color: $M-01;
+				overflow: hidden;
+				line-clamp: 2;
 			}
 
 			&:first-child {
@@ -43,7 +56,7 @@
 					top: -0.45rem;
 					left: -2.75rem;
 					width: 3rem;
-					height: 4rem;
+					height: clamp(3.25rem, 10vw, 4rem);
 					background: $M-02;
 					mask: url("../img/ico-prev-next.svg") center / contain no-repeat;
 				}
@@ -68,7 +81,7 @@
 					top: -0.45rem;
 					right: -2.75rem;
 					width: 3rem;
-					height: 4rem;
+					height: clamp(3.25rem, 10vw, 4rem);
 					background: $M-02;
 					mask: url("../img/ico-prev-next.svg") center / contain no-repeat;
 					transform: rotate(180deg);
