--- a/assets/scss/components/_news.scss
+++ b/assets/scss/components/_news.scss
@@ -35,7 +35,13 @@
 		}
 
 		.hero h1 {
+			display: -webkit-box;
+			-webkit-box-orient: vertical;
 			width: 100%;
+			max-height: 3em;
+			overflow: hidden;
+			line-clamp: 2;
+			-webkit-line-clamp: 2;
 
 			&::before {
 				display: none;
@@ -65,12 +71,22 @@
 		box-shadow: 20px 20px 60px $G-03, -20px -20px 60px $G-00;
 
 		h2 {
+			display: -webkit-box;
+			-webkit-box-orient: vertical;
 			width: 75%;
+			max-height: 3.15rem;
+			overflow: hidden;
+			line-clamp: 2;
+			-webkit-line-clamp: 2;
 			margin: 0;
 			font-size: 1.5em;
 			line-height: 1;
 			text-align: left;
 			text-transform: none;
+
+			@include mobile {
+				width: 65%;
+			}
 		}
 
 		.info {
@@ -98,7 +114,7 @@
 		img {
 			display: block;
 			width: 100%;
-			margin: 2rem 0;
+			margin: 1.5rem 0;
 			object-fit: cover;
 		}
 
@@ -179,33 +195,28 @@
 				}
 
 				figcaption {
+					max-height: 1em;
 					margin: 0.5rem 0;
 					font-weight: 700;
 					font-size: 1.2em;
 					color: $M-01;
 					text-transform: uppercase;
+					overflow: hidden;
+					white-space: nowrap;
+					text-overflow: ellipsis;
 				}
 
 				p {
+					display: -webkit-box;
+					-webkit-box-orient: vertical;
 					position: relative;
 					width: 35ch;
+					max-height: 3.5em;
 					font-size: 0.85em;
 					line-height: 1.2em;
-
-					&::after {
-						content: "";
-						text-align: right;
-						position: absolute;
-						bottom: 0;
-						right: 2rem;
-						width: 30%;
-						height: 1.2em;
-						background: linear-gradient(
-							to right,
-							transparent,
-							$G-01 50%
-						);
-					}
+					overflow: hidden;
+					line-clamp: 3;
+					-webkit-line-clamp: 3;
 				}
 
 				img {
